# Chess

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
3dparty/: CMakeLists.txt  Makefile  cmake_install.cmake
app/: CMakeLists.txt  main.cpp
app/src/: Board.cpp  CMakeLists.txt  Game.cpp  Move.cpp  Piece.cpp  Player.cpp  Render.cpp  Spot.cpp
app/src/include/: Board.h  Game.h  Move.h  Piece.h  Player.h  Render.h  Spot.h
app/src/pieces/: Bishop.cpp  King.cpp  Knight.cpp  Pawn.cpp  Queen.cpp  Rock.cpp
app/src/pieces/include/: Bishop.h  King.h  Knight.h  Pawn.h  Queen.h  Rock.h
src/: Board.cpp  CMakeLists.txt  Piece.cpp  Player.cpp  Spot.cpp
src/include/: Move.h  Piece.h  Spot.h
src/pieces/: Bishop.cpp  King.cpp  Knight.cpp  Pawn.cpp  Queen.cpp  Rock.cpp
src/pieces/include/: Bishop.h  King.h  Knight.h  Pawn.h  Queen.h  Rock.h
